feat(deimos): adiciona rota POST `/deimos/plunder/verify`
